--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             Web<span class="logo-part">Studio</span>
           </a>
           <ul class="header-list">
-            <li class="nav-item"><a href="./index.html" class="nav-link">Studio </a></li>
-            <li class="nav-item"><a href="" class="nav-link">Portfolio </a></li>
-            <li class="nav-item"><a href="" class="nav-link">Contacts </a></li>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
           </ul>
         </nav>
 
@@ -70,6 +72,11 @@
           <h2 class="feature-title visually-hidden">Benefits</h2>
           <ul class="feature-list">
             <li class="feature-item">
+              <div class="feature-item-icon-box">
+                <svg class="feature-item-icon">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +84,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon-box">
+                <svg class="feature-item-icon">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +96,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon-box">
+                <svg class="feature-item-icon">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +108,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon-box">
+                <svg class="feature-item-icon">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-subtitle">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -116,6 +138,40 @@
               <div class="team-item-name">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-icons-list">
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+
+                <!-- <svg class="feature-item-icon">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg> -->
               </div>
             </li>
             <li class="team-item">
@@ -128,6 +184,36 @@
               <div class="team-item-name">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-icons-list">
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -140,6 +226,36 @@
               <div class="team-item-name">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-icons-list">
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -152,6 +268,36 @@
               <div class="team-item-name">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-icons-list">
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icons-list-item">
+                    <a href="" class="team-item-icon-link">
+                      <svg class="team-item-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -164,72 +310,126 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-iIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/screen-iIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-content-wrap">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-cover-wrap">
+                  <p class="portfolio-item-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -241,14 +441,49 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html">
-          Web<span class="footer-logo-part">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-conteiner">
+        <div>
+          <a class="footer-logo" href="./index.html">
+            Web<span class="footer-logo-part">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <h3 class="footer-social-title">Social media</h3>
+          <ul class="footer-social-list">
+            <li class="footer-icons-list-item">
+              <a href="" class="footer-item-icon-link">
+                <svg class="footer-item-icon">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-list-item">
+              <a href="" class="footer-item-icon-link">
+                <svg class="footer-item-icon">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-list-item">
+              <a href="" class="footer-item-icon-link">
+                <svg class="footer-item-icon">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-list-item">
+              <a href="" class="footer-item-icon-link">
+                <svg class="footer-item-icon">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
