--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <ul class="feature-list">
             <li class="feature-item">
               <div class="feature-item-icon-box">
-                <svg class="feature-item-icon">
+                <svg class="feature-item-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -85,7 +85,7 @@
             </li>
             <li class="feature-item">
               <div class="feature-item-icon-box">
-                <svg class="feature-item-icon">
+                <svg class="feature-item-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -97,7 +97,7 @@
             </li>
             <li class="feature-item">
               <div class="feature-item-icon-box">
-                <svg class="feature-item-icon">
+                <svg class="feature-item-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -109,7 +109,7 @@
             </li>
             <li class="feature-item">
               <div class="feature-item-icon-box">
-                <svg class="feature-item-icon">
+                <svg class="feature-item-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
