--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
                 <ul class="team-icons-list">
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -187,28 +187,28 @@
                 <ul class="team-icons-list">
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -229,28 +229,28 @@
                 <ul class="team-icons-list">
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -271,28 +271,28 @@
                 <ul class="team-icons-list">
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icons-list-item">
                     <a href="" class="team-item-icon-link">
-                      <svg class="team-item-icon">
+                      <svg class="team-item-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -452,32 +452,32 @@
           </p>
         </div>
         <div class="footer-social">
-          <h3 class="footer-social-title">Social media</h3>
+          <p class="footer-social-title">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-icons-list-item">
               <a href="" class="footer-item-icon-link">
-                <svg class="footer-item-icon">
+                <svg class="footer-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-list-item">
               <a href="" class="footer-item-icon-link">
-                <svg class="footer-item-icon">
+                <svg class="footer-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-list-item">
               <a href="" class="footer-item-icon-link">
-                <svg class="footer-item-icon">
+                <svg class="footer-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-list-item">
               <a href="" class="footer-item-icon-link">
-                <svg class="footer-item-icon">
+                <svg class="footer-item-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
