--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
     <footer class="footer">
       <div class="container footer-conteiner">
-        <div>
+        <div class="footer-leftside">
           <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo-part">Studio</span>
           </a>
