--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Banking App</h3>
