--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -359,13 +359,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -380,13 +380,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -401,13 +401,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -422,13 +422,13 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-item-cover-wrap">
-                  <p class="portfolio-item-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <!-- <div class="portfolio-item-cover-wrap"> -->
+                <p class="portfolio-item-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <!-- </div> -->
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
