--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             Web<span class="logo-part">Studio</span>
           </a>
           <ul class="header-list">
-            <li class="nav-item current">
-              <a href="./index.html" class="nav-link">Studio</a>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link current">Studio</a>
             </li>
             <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
             <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
